plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.homesweet'
version = 'V1.0.1'
description = 'homesweet-back'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

jacoco {
    toolVersion = "0.8.12"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Core Web & Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Security / OAuth2
   implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
   implementation 'org.springframework.boot:spring-boot-starter-security'

    // Database & Migration
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly   'com.h2database:h2'
    runtimeOnly   'com.mysql:mysql-connector-j'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // Observability
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Build-time tools
    compileOnly        'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.awaitility:awaitility:4.2.0'

    // Swagger
    implementation "io.swagger.core.v3:swagger-annotations:2.2.39"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13"

    // Aws
    implementation platform('io.awspring.cloud:spring-cloud-aws-de' +
            'pendencies:3.1.1')
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'

    // WebSocket
    implementation "org.springframework.boot:spring-boot-starter-websocket"

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Circuit Braker - 안채호
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0' // 서킷 브레이커 라이브러리 Resilience4j
    implementation 'org.springframework.boot:spring-boot-starter-aop' // AOP 서킷 브레이커 어노테이션 동작을 위해 필수
}

tasks.test {
    useJUnitPlatform()
    finalizedBy(tasks.jacocoTestReport)
}

def jacocoExcludes = [
        '**/*Application*',
        '**/Q*',                    // QueryDSL Q 클래스 전체
        '**/domain/**/Q*',          // domain 패키지의 Q 클래스
        '**/entity/Q*',             // entity 패키지의 Q 클래스
        '**/controller/**',         // controller 제외
        '**/common/**',             // common 제외
        '**/config/**',             // config 제외
        '**/exception/**',          // exception 제외
        '**/mapper/**'              // mapper 제외
]

tasks.jacocoTestReport {
    dependsOn(tasks.test)

    reports {
        html.required.set(true)
        xml.required.set(true)
        csv.required.set(false)
    }

    // 리포트에서 제외
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoExcludes)
        }))
    }

    finalizedBy(tasks.jacocoTestCoverageVerification)
}

tasks.jacocoTestCoverageVerification {
    dependsOn(tasks.jacocoTestReport)

    violationRules {
        rule {
            element = 'CLASS'
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                // minimum = 0.8
            }

            excludes = jacocoExcludes
        }
    }
}